fix:add text component and change elements spacing

--- a/practice-two/src/styles/layout/footer.css
+++ b/practice-two/src/styles/layout/footer.css
@@ -20,7 +20,6 @@
 }
 
 .logo-text {
-  font-size: 14px;
   line-height: 24px;
 }
 
@@ -58,20 +57,18 @@
   margin-top: 43px;
   display: flex;
   flex-direction: column;
-  gap: 16.5px;
+  gap: 25px;
 }
 
 .title-link {
-  padding-bottom: 14px;
-  font-weight: var(--fw-bold);
+  padding-bottom: 5px;
   line-height: 34px; 
   letter-spacing: 0.2px;
 }
 
 .item-link {
   font-family: var(--primary-font);
-  padding-bottom: 20px;
-  font-size: 14px;
+  /* padding-bottom: 20px; */
   font-weight: var(--fw-normal);
   letter-spacing: 0.2px;
 }
@@ -86,14 +83,14 @@
 }
 
 .footer-copyright {
-  margin-top: 36.8px;
+  margin-top: 48px;
 }
 
 .copyright-wrapper {
-  margin-top: 27px;
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
-  gap: 33px;
+  gap: 15px;
 }
 
 .copyright-text {
@@ -106,7 +103,6 @@
 .contact {
   display: flex;
   flex-direction: column;
-  gap: 19.52px;
 }
 
 .text-contact {
@@ -188,19 +184,19 @@
   }
 
   .item-link {
-    padding-bottom: 19.8px;
-    font-size: 14px;
+    padding-bottom: 0;
     letter-spacing: 0.18px;
   }
 
   .footer-summary {
     margin-top: 0;
     flex-direction: row;
+    gap: 15px;
   }
 
   .product {
     padding-left: 107px;
-    padding-right: 52px;
+    padding-right: 55px;
   }
 
   .help-center {
@@ -209,7 +205,7 @@
 
   .title-link {
     font-size: 16px;
-    padding-bottom: 12px;
+    padding-bottom: 0;
   }
 
   .social-media {
@@ -222,7 +218,7 @@
   }
 
   .footer-copyright {
-    margin-top: 90px;
+    margin-top: 97px;
   }
 
   .copyright-wrapper {
@@ -233,9 +229,6 @@
   }
 
   .copyright-text {
-    color: var(--light-color);
-    font-size: 14px;
-    font-weight: var(--fw-normal);
     letter-spacing: 0.225px;
   }
 
@@ -245,7 +238,6 @@
   }
 
   .text-contact {
-    font-size: 14px;
     letter-spacing: 0.18px;
   }
 
